--- a/style.css
+++ b/style.css
@@ -2,13 +2,32 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
-#container{
+body{
+    background: #07d4f9;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: auto;
+    height: 90vh;
+}
+#container{
+    display: flex;
+    margin:  0 auto;
+    flex-direction: column;
+    align-items: center;
     width: 600px;
     gap: 10px;
+    background-color: #fff;
+}
+form{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+input{
+    padding: 6px;
+    font-weight: bold;
+    width: 65px;
 }
