--- a/style.css
+++ b/style.css
@@ -15,9 +15,11 @@ body{
 #container{
     display: flex;
     margin:  0 auto;
+    padding: 25px;
+    border-radius: 20px;
     flex-direction: column;
     align-items: center;
-    width: 600px;
+    max-width: 600px;
     gap: 10px;
     background-color: #fff;
 }
@@ -25,9 +27,30 @@ form{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    flex-direction: column;
+}
+label{
+    font-size: 1.2rem;
 }
 input{
-    padding: 6px;
+    padding: 4px;
+    text-align: center;
     font-weight: bold;
     width: 65px;
+    border: .1px solid #aaa;
+    border-radius: 5px;
+}
+button{
+    margin: 10px;
+    padding: 10px;
+    border: none;
+    border-radius: 9px;
+    cursor: pointer;
+}
+.caixa-result{
+    max-width: 200px;
+    width: 100%;
+    height: 100px;
+    border: 1px dashed #333;
+    margin: 10px;
 }
