--- a/style.css
+++ b/style.css
@@ -48,9 +48,29 @@ button{
     cursor: pointer;
 }
 .caixa-result{
-    max-width: 200px;
+    max-width: 250px;
     width: 100%;
     height: 100px;
     border: 1px dashed #333;
     margin: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    justify-content: center;
+    font-weight: bolder;
+}
+.equacao{
+    width: 100%;
+    margin: auto;
+    padding: 4px;
+    background-color: #eee;
+}
+#delta{
+    width: 100%;
+    margin: auto;
+}
+.result-raiz{
+    display: flex;
+    margin-top: 8px;
+    gap: 1rem;
 }
