--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 90vh;
+    height: 100vh;
+    overflow: hidden;
 }
 #container{
     display: flex;
@@ -23,36 +24,46 @@ body{
     gap: 10px;
     background-color: #fff;
 }
+h1{
+    margin: 10px 0 20px;
+}
 form{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     flex-direction: column;
 }
+form div{
+    margin-bottom: 1.1rem;
+}
 label{
     font-size: 1.2rem;
 }
 input{
-    padding: 4px;
+    padding: 5px;
     text-align: center;
-    font-weight: bold;
-    width: 65px;
+    font-size: 1.1rem;
+    width: 70px;
     border: .1px solid #aaa;
     border-radius: 5px;
 }
 button{
     margin: 10px;
+    font-size: 1.1em;
+    font-weight: bold;
     padding: 10px;
     border: none;
     border-radius: 9px;
     cursor: pointer;
+}
+button:active{
+    opacity: 0.7;
 }
 .caixa-result{
     max-width: 250px;
     width: 100%;
     height: 100px;
     border: 1px dashed #333;
-    margin: 10px;
     display: flex;
     flex-wrap: wrap;
     text-align: center;
@@ -71,6 +82,11 @@ button{
 }
 .result-raiz{
     display: flex;
-    margin-top: 8px;
     gap: 1rem;
+}
+@media screen and (max-width:550px){
+    #container{
+        max-width: 480px;
+        margin: 20px;
+    }
 }
